<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_diary">

    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.example.calorie_tracker.ui.diary.DiaryFragment"
        android:label="@string/nav_diary"
        tools:layout="@layout/fragment_diary">
        
        <action
            android:id="@+id/action_diaryFragment_to_foodFragment"
            app:destination="@id/navigation_foods" />
    </fragment>

    <fragment
        android:id="@+id/navigation_foods"
        android:name="com.example.calorie_tracker.ui.food.FoodFragment"
        android:label="@string/nav_food"
        tools:layout="@layout/fragment_food">
        
        <argument
            android:name="mealType"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.calorie_tracker.ui.progress.ProgressFragment"
        android:label="@string/nav_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.calorie_tracker.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />
        
</navigation> 